# AsciiBird

./: CMakeLists.txt  README.md
assets/: bird.ascii  pipe.ascii
include/: clock.hpp  inputHandler.hpp  osDefines.hpp  physicsEngine.hpp  pipe.hpp  player.hpp  random.hpp  renderer.hpp
src/: clock.cpp  inputHandler.cpp  main.cpp  physicsEngine.cpp  pipe.cpp  player.cpp  random.cpp  renderer.cpp
